More advanced settings samples * JVM HeapDumpOnOutOfMemoryError (Useful to debug but the dump is long to produce) * JVM GC Details * JMX (Sample of configuration to activate it without SSL and with access/password credentials) * JCR Statistics * CRaSH Extension (change telnet and SSH ports)